--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,9 @@
     <link rel="stylesheet" href="css/style.css">
 
 
-    <title>Ostéopathe Saint -Mandé</title>
+    <title>Joséphine Lyon - Ostéopathe Paris 15</title>
 </head>
 <body>
-<noscript>
-    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
-        Please enable it to continue.</strong>
-</noscript>
 <div id="app"></div>
 <!-- built files will be auto injected -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
