--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Joséphine Lyon - Ostéopathe Paris 15</title>
+    <meta name="title" content="Osteopathe Paris 15" />
+    <meta name="description" content="Cabinet d'ostéopathie Paris 15 de Joséphine Lyon. Mme Lyon vous reçoit sur rendez-vous
+    au cabinet d'ostéopathie 2 square du Croisic 75015 Paris." />
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VZPVWV85XQ"></script>
     <script>
@@ -17,9 +22,6 @@
     <link href="https://fonts.googleapis.com/css2?family=GFS+Didot&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-
-
-    <title>Joséphine Lyon - Ostéopathe Paris 15</title>
 </head>
 <body>
 <div id="app"></div>
